enable_testing()

add_executable(test_log test_log.cpp)
add_dependencies(test_log gudov)
force_redefine_file_macro_for_sources(test_log)
target_link_libraries(test_log gudov)
add_test(NAME test_log COMMAND test_log)

add_executable(test_config test_config.cpp)
add_dependencies(test_config gudov)
force_redefine_file_macro_for_sources(test_config)
target_link_libraries(test_config gudov)
add_test(NAME test_config COMMAND test_config)

add_executable(test_thread test_thread.cpp)
add_dependencies(test_thread gudov)
force_redefine_file_macro_for_sources(test_thread)
target_link_libraries(test_thread gudov)
add_test(NAME test_thread COMMAND test_thread)

add_executable(test_util test_util.cpp)
add_dependencies(test_util gudov)
force_redefine_file_macro_for_sources(test_util)
target_link_libraries(test_util gudov)
add_test(NAME test_util COMMAND test_util)

add_executable(test_scheduler test_scheduler.cpp)
add_dependencies(test_scheduler gudov)
force_redefine_file_macro_for_sources(test_scheduler)
target_link_libraries(test_scheduler gudov)
add_test(NAME test_scheduler_test COMMAND test_scheduler)

add_executable(test_fiber test_fiber.cpp)
add_dependencies(test_fiber gudov)
force_redefine_file_macro_for_sources(test_fiber)
target_link_libraries(test_fiber gudov)
add_test(NAME test_fiber_test COMMAND test_fiber)

add_executable(test_iomanager test_iomanager.cpp)
add_dependencies(test_iomanager gudov)
force_redefine_file_macro_for_sources(test_iomanager)
target_link_libraries(test_iomanager gudov)
add_test(NAME test_iomanager COMMAND test_iomanager)

add_executable(test_hook test_hook.cpp)
add_dependencies(test_hook gudov)
force_redefine_file_macro_for_sources(test_hook)
target_link_libraries(test_hook gudov)
add_test(NAME test_hook COMMAND test_hook)

add_executable(test_address test_address.cpp)
add_dependencies(test_address gudov)
force_redefine_file_macro_for_sources(test_address)
target_link_libraries(test_address gudov)
add_test(NAME test_address COMMAND test_address)

add_executable(test_socket test_socket.cpp)
add_dependencies(test_socket gudov)
force_redefine_file_macro_for_sources(test_socket)
target_link_libraries(test_socket gudov)
add_test(NAME test_socket COMMAND test_socket)

add_executable(test_bytearray test_bytearray.cpp)
add_dependencies(test_bytearray gudov)
force_redefine_file_macro_for_sources(test_bytearray)
target_link_libraries(test_bytearray gudov)
add_test(NAME test_bytearray COMMAND test_bytearray)